--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,9 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link rel="stylesheet" href="/src/App.css">
     <!--<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
+    
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
@@ -24,15 +25,14 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <link rel="stylesheet" href="../src/styles.css"
-
+    
     <title>TodoList</title>
 
 
   </head>
   <body>
 
-<h1>To Do List</h1>
+<h1 class="heading">To Do List</h1>
 
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
@@ -47,4 +47,6 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script src="/src/form.js" type="babel/text"></script>
+  <script src="/src/todo.js" type="babel/text"></script>
 </html>
